# TP-C-Cpp-HW2

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  task.md
project/include/: search.h  search_mt.h  search_st.h  seq_search.h  sequence_search.h
project/src/: search.c  search_mt.c  search_st.c  seq_search_mt.c  seq_search_st.c  sequence_search_mt.c  sequence_search_st.c
project/stress_test/: CMakeLists.txt
project/stress_test/include/: utils.h
project/stress_test/src/: main_stress.c  utils.c
project/testing/: CMakeLists.txt
project/testing/data/BIG_DATA/: CASE5.txt
project/testing/data/TASKS/: TASK1.txt  TASK2.txt  TASK3.txt  TASK4.txt  TASK5.txt
project/testing/data/TASK_LIST_TO_ARR/: TASK1.txt
project/testing/stress_test/: CMakeLists.txt
project/testing/stress_test/src/: main.c  main_stress.c  utils.c
project/testing/tests/: CMakeLists.txt
project/testing/tests/include/: utils.h
project/testing/tests/src/: base_tests.cpp  main.cpp  main_tests.cpp  mt_tests.cpp  st_tests.cpp  utils.cpp
project/tests/: CMakeLists.txt
project/tests/include/: utils.h
project/tests/src/: base_tests.cpp  utils.cpp
scripts/: gen_test_data.sh  install.sh  run.sh  run_stress.py  run_stress.sh
