PROJECT(.)
CMAKE_MINIMUM_REQUIRED(VERSION 3.10.2)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror")
#TODO: CODE COV.
FIND_PACKAGE(GTest REQUIRED)
INCLUDE_DIRECTORIES("${GTEST_INCLUDE_DIRS}")

FIND_PACKAGE(Threads REQUIRED)
INCLUDE_DIRECTORIES(include ../../include) #s end!!
ADD_EXECUTABLE(test src/main.cpp src/base_tests.cpp include/utils.h src/utils.cpp) #s end!!

TARGET_LINK_LIBRARIES(test ${GTEST_BOTH_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} sequence_search_static dl)
ENABLE_TESTING()
ADD_TEST(
        NAME MULTI_THREAD_TEST
        COMMAND . ${CMAKE_SOURCE_DIR}/..
)

#ADD_SUBDIRECTORY(tests)
